# ec2_metadata

./: .gitignore  Jenkinsfile  Makefile  README.md  ec2_metadata.py  pyproject.toml  query_ec2_metadata.py  requirements-dev.txt  requirements-tests.txt  setup.py  test_ec2_metadata.py
tests/: test_ec2_metadata.py
