[project]
name = "query_ec2_metadata"
version = "1.0.0"
description = "Allows querying EC2 instance metadata"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests",
    "boto3"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "httpretty",
    "safety",
    "mypy",
    "moto[ec2]"
]

[project.scripts]
ec2-metadata = 'query_ec2_metadata:main'
instance-identity = 'query_ec2_metadata:main'
instance-tag = 'query_ec2_metadata:main'

[build-system]
requires = ["setuptools>=40.9.0"]
build-backend = "setuptools.build_meta"
